--- a/Lab5/Ex7.html
+++ b/Lab5/Ex7.html
@@ -11,11 +11,12 @@
         hr{
             border: 1px solid gray;
         }
+        
     </style>
 
 </head>
 
-<body style="background-color: rgb(54, 2, 89);">
+<body style="background-color: rgb(54, 2, 89);font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
     <p style="color: white;margin-left: 10px;padding-top: 25px;">
         <span class="text-gray-500">Lời tựa</span> Top 100 Nhạc Rock Việt Nam là danh sách 100 ca khúc hot nhất hiện tại của thể loại Nhạc Rock Việt Nam, được Zing MP3 tự động tổng hợp dựa trên thông tin số liệu lượt nghe và lượt chia sẻ của từng bài hát trên phiên bản web và phiên bản Mobile. Dữ liệu sẽ được lấy trong 30 ngày gần nhất và được cập nhật liên tục.
     </p>
@@ -42,7 +43,7 @@
                     </p>
                     </div>
                     <div class="hidden md:block">
-                    <div style="padding-top: 16px;">
+                    <div style="padding-top: 16px;justify-content: center;">
                         <p class=" text-gray-500">
                         04:02
                     </div>
@@ -79,7 +80,7 @@
                     </p>
                     </div>
                     <div class="hidden md:block">
-                    <div style="padding-top: 16px;">
+                    <div style="padding-top: 16px;justify-content: center;">
                         <p class=" text-gray-500">
                         05:30
                     </div>
@@ -116,7 +117,7 @@
                     </p>
                     </div>
                     <div class="hidden md:block">
-                    <div style="padding-top: 16px;">
+                    <div style="padding-top: 16px;justify-content: center;">
                         <p class=" text-gray-500">
                         04:34
                     </div>
@@ -154,7 +155,7 @@
                     <div class="hidden md:block">
                     <div style="padding-top: 16px;">
                         <p class=" text-gray-500">
-                        03:46
+                            &emsp;&nbsp;&nbsp;03:46
                     </div>
                     </div>
                 </div>
@@ -172,7 +173,6 @@
             </a>
         </li>
         
-
         <hr>
         </ul>
     </div>
