--- a/Lab6/Ex2.html
+++ b/Lab6/Ex2.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Đăng ký tài khoản diễn đàn</title>
+  <!-- created by justa 
+    date: 14:41 18-4-2023 -->
   <style>
     table {
       width: 800px;
@@ -14,7 +16,7 @@
     td {
       padding: 8px;
       font-weight: 550;
-      display: table-co;
+      
     }
 
     input[type=text], input[type=email], input[type=tel] {
@@ -49,6 +51,7 @@
     select{
       width: 20%;
     }
+    
   </style>
 </head>
 <body>
