--- a/Lab6/Ex1.html
+++ b/Lab6/Ex1.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <!-- created by justa 
+    date: 14:10 18-4-2023 -->
     <style>
         body {
   margin: 0;
